--- a/.github/workflows/ohto.yml
+++ b/.github/workflows/ohto.yml
@@ -23,6 +23,14 @@ jobs:
          with:
            python-version: 3.9
            
+       - name: repo connect
+         continue-on-error: true
+         run: |
+           git config --global user.name ${{ secrets.NAME }}
+           git config --global user.email ${{ secrets.MAIL }}
+           git config --global credential.helper store
+           echo "https://${{ secrets.NAME }}:${{ secrets.TOKEN }}@github.com" > ~/.git-credentials
+            
        - name: Building
          continue-on-error: true
          run: |
@@ -38,3 +46,12 @@ jobs:
            wget -O .env ${{ secrets.ENV }}
            echo environment loaded!
            python3 main.py
+       - name: Loop workflow
+         continue-on-error: true
+         run: |
+           git clone https://github.com/${GITHUB_REPOSITORY} loop
+           cd loop || exit 1
+           echo $(date -u +%T%P) >> loop.txt
+           git add loop.txt
+           git commit -m "Workflow : Loop $(date -u +%D-%T%P)"
+           git push -q https://${{ secret.TOKEN }}@github.com/${GITHUB_REPOSITORY} HEAD:main
