--- a/.github/workflows/ohto.yml
+++ b/.github/workflows/ohto.yml
@@ -54,4 +54,4 @@ jobs:
            echo $(date -u +%T%P) >> loop.txt
            git add loop.txt
            git commit -m "Workflow : Loop $(date -u +%D-%T%P)"
-           git push -q https://${{ secret.TOKEN }}@github.com/${GITHUB_REPOSITORY} HEAD:main
+           git push -q https://${{ secrets.TOKEN }}@github.com/${GITHUB_REPOSITORY} HEAD:main
